Update phylogenetic tree to appropriately update when new nodes are added

--- a/components/phylogenetic_tree.html
+++ b/components/phylogenetic_tree.html
@@ -450,6 +450,7 @@
       let panel = $('#tree').parent();
       if (!panel.length) return;
       if (!temp.tree) return MT.computeTree().then(drawTree);
+      if (temp.tree.leaves().length != temp.nodes.length) return MT.computeTree().then(drawTree);
 
       tree = new TidyTree(temp.tree.clone(), {
         parent: '#tree',
