--- a/components/2d_network.html
+++ b/components/2d_network.html
@@ -2574,7 +2574,7 @@ Note that this may cause slow performance on larger networks.">
     }).trigger('input');
 
     $('#network-export').on('click', function () {
-      ga('send', 'event', '2D-network-export', 'trigger', 'on');
+        gtag('event', '2D-network-export', {'event_type': 'trigger', 'event_value': 'on'});
       let network = document.getElementById('network');
       let $network = $(network);
       let watermark = d3.select(network).append('image')
