Udpate API key with stadia maps

--- a/components/geo_map.html
+++ b/components/geo_map.html
@@ -384,7 +384,7 @@
     }
 
     var layers = {
-      basemap: L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.png', {
+      basemap: L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.png?api_key=2b8d7c40-8b32-4487-9af9-b66888a2e882', {
         maxZoom: 20,
         attribution: '© <a href="https://stadiamaps.com/" target="_blank">Stadia Maps</a>, © <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> © <a href="https://www.openstreetmap.org/about" target="_blank">OpenStreetMap</a> contributors'
     }),
